# somen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml  test.yml
examples/: json.rs
src/: error.rs  lib.rs  macros.rs  parser.rs  position.rs  stream.rs
src/error/: expects.rs
src/error/expects/: expect.rs  no_std.rs  std.rs
src/parser/: any.rs  atomic.rs  boxed.rs  choice.rs  combinator.rs  cond.rs  either.rs  eof.rs  errors.rs  func.rs  future.rs  iterable.rs  lazy.rs  map.rs  no_state.rs  opt.rs  or.rs  peek.rs  position.rs  record.rs  repeat.rs  satisfy.rs  sep_by.rs  sep_by_times.rs  set.rs  skip.rs  streamed.rs  tag.rs  then.rs  times.rs  token.rs  tokens.rs  tuples.rs  until.rs  utils.rs  value.rs  wrapper.rs
src/parser/atomic/: any.rs  cond.rs  eof.rs  func.rs  lazy.rs  position.rs  set.rs  tag.rs  token.rs  tokens.rs  value.rs
src/parser/combinator/: choice.rs  fail.rs  opt.rs  peek.rs  prefix.rs  prefixed_by.rs  skip.rs  then.rs  tuples.rs
src/parser/iterable/: combinator.rs  flat.rs  generator.rs  stream.rs
src/parser/streamed/: boxed.rs  choice.rs  collect.rs  collected.rs  combinator.rs  enumerate.rs  fill.rs  filter.rs  flat.rs  flatten.rs  fold.rs  generator.rs  nth.rs  positioned.rs  reduce.rs  repeat.rs  scan.rs  sep_by.rs  sep_by_times.rs  stream.rs  times.rs  tuples.rs  until.rs
src/parser/wrapper/: discard.rs  either.rs  exclusive.rs  expect.rs  lazy.rs  map.rs  map_err.rs  no_state.rs  (+4 more)
src/stream/: builder.rs  convert.rs  imp.rs  infallible.rs  iterator.rs  position.rs  record.rs  reset.rs  rewind.rs  unpositioned.rs
(+85 files in other folders)
