[package]
name = "somen"
version = "0.0.1"
description = "An asynchronous parser combinator."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/somen"
keywords = ["parser-combinator", "parser", "async", "asynchronous"]
categories = ["parsing", "asynchronous"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[features]
default = ['std']
std = ['alloc', 'futures-core/std', 'futures-io']
alloc = ['futures-core/alloc']

[dependencies]
futures-core = { version = "0.3", default_features = false }
futures-io = { version = "0.3", optional = true }
pin-project-lite = "0.2"
